# hw05_proteins

./: .replit  instructions.md  lessonplan.md  main.py  pyproject.toml  translate.py
.lesson/: lessonplan.md
